5.1
 * Add the ability to disable bulk loading of SSTables (CASSANDRA-18781)
 * Clean up obsolete functions and simplify cql_version handling in cqlsh (CASSANDRA-18787)
Merged from 5.0:
 * Make the output of ON/OFF commands in cqlsh consistent (CASSANDRA-18547)
 * Do not create sstable files before registering in txn (CASSANDRA-18737)
 * Remove wrong assertion in SSTableLoader (CASSANDRA-18840)
 * Do not log stacktrace on mismatched cache and schema version and checksum error in AutoSavingCache (CASSANDRA-18862)
 * Remove wrong assertion in SSTableLoader (CASSANDRA-18840)
 * Fix accessing java.nio.Bits.TOTAL_CAPACITY in Java17 (CASSANDRA-18848)
 * Remove metrics-reporter-config dependency (CASSANDRA-18743)
 * Fix SAI's SegmentMetadata min and max primary keys (CASSANDRA-18734)
 * Remove commons-codec dependency (CASSANDRA-18772)
Merged from 4.1:
 * Internode legacy SSL storage port certificate is not hot reloaded on update (CASSANDRA-18681)
 * Nodetool paxos-only repair is no longer incremental (CASSANDRA-18466)
Merged from 4.0:
 * Enable 3rd party JDK installations for Debian package (CASSANDRA-18844)
Merged from 3.11:
 * Revert CASSANDRA-18543 (CASSANDRA-18854)
Merged from 3.0:
 * Add cqlshrc.sample and credentials.sample into Debian package (CASSANDRA-18818)

5.0-alpha1
 * Fix rpm installations to work with jdk17 (CASSANDRA-18817)
 * Fix Depends and Build-Depends for Java for Debian packages (CASSANDRA-18809)
 * Update command line flags --add-exports and --add-opens for JDK17 (CASSANDRA-18439)
 * Update commons-lang3 to 3.13.0 (CASSANDRA-18789)
 * Forbid SAI indexes with analysis options on primary key columns (CASSANDRA-18782)
 * Expose bootstrap failure state via JMX and nodetool info (CASSANDRA-18749)
 * Reduce size of per-SSTable index components for SAI (CASSANDRA-18673)
 * Remove unnecessary Netty dependencies after upgrade to version 4.1.96 (CASSANDRA-18729)